--- a/themes/bootstrap3/less/components/icons.less
+++ b/themes/bootstrap3/less/components/icons.less
@@ -1,8 +1,14 @@
-
 /**
- * Basic alignment styling for icons
+ * Basic alignment and styling for icons
  * generated through the Icon view helper.
  */
+
+.icon--link {
+    display: inline-flex;
+    gap: 0.125rem;
+    align-items: center;
+    vertical-align: inherit;
+}
 
 .icon--font {
     display: inline-block;
@@ -17,7 +23,6 @@
     max-width: 1.25em;
     height: min-content; /* FF */
     height: fit-content;
-    margin-top: 0.125em;
     text-align: center;
     vertical-align: top;
 }
@@ -28,12 +33,6 @@
     margin-top: 0.25em;
     fill: currentColor;
     vertical-align: top;
-}
-
-.icon--link {
-    display: inline-flex;
-    gap: 0.125rem;
-    vertical-align: inherit;
 }
 
 .show--closed,
